--- a/style.css
+++ b/style.css
@@ -1,22 +1,49 @@
 body {
-    width:900px;
+    font-family: 'Varela Round', sans-serif;
+    /*width:900px;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 10px;*/
 }
+
 
 #header {
     display: block;
-    padding: 20px;
-    background-image: url(/images/board-electronics-computer-data-processing.jpg);
-    background-repeat: no-repeat;
+    padding: 0.7rem;
+    background-color: #330000;
+    color: floralwhite;
+    /*background-image: url(/images/board-electronics-computer-data-processing.jpg);
+    background-repeat: no-repeat;*/
 }
 
-.double {
-    width: 50%;
-    float:right;
+.mother {
+    display:inline-block;
+    width: 70%;
+    padding: 10px;
+    text-align: justify;
+    line-height: 1.3rem;
+}
+
+.row {
+    display: block;
+    width:100%;
+    text-align:center;
 }
 
 .container {
-    width:100%
-    clear: both;
+    display: block;
+    width:99%;
+}
+@media (min-width: 600px) {
+    .container {
+        display: inline-block;
+        width:47%;
+        padding:1%;
+    }
+}
+
+
+img {
+    box-shadow: 4px 4px 4px gray;
+    height: 100%;
+    width: 100%;
 }
